examples/web-app/web-app-ingress-letsencrypt-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: examples
spec:
  tls:
    - hosts:
        - web-app.${DOMAIN}
      secretName: letsencrypt-staging-cloudflare-tls
      # secretName: letsencrypt-production-cloudflare-tls
  rules:
    - host: web-app.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
