examples/web-app/web-app-ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: examples
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: web-app-letsencrypt-staging-tls
      # secretName: web-app-letsencrypt-production-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
